	* app-chromium: Added decoding for Safe Browsing Cookies files  
	* app-chromium: Added decoding for Local State files  
	* app-chromium: Added decoding for Login Data files  
	* app-chromium: Added decoding for Login Data For Account files  
	* app-chromium: Added decoding for Preferences files  
	* app-chromium: Implemented new class post_processor_impl  
	* app-chromium: Enhanced post_processor_impl to support decryption of both v10 and v20 Chromium encryption keys
	* app-chromium: Enhanced profile class to fill metadata from Preferences' profile key
	* ant.evidence: Added new module post.user_accounts_from_cookies  
	* ant.evidence.vfs.accounts: Removed cookie retrieval feature
	* ant.evidence.vfs.accounts: Removed old Chromium code
	* ant.evidence.vfs.cookies: Removed old Chromium code
	* evidence-password-hashes: Fixed .hashcat file export  
	* evidence-password-hashes: Fixed .john file export  
	* libmobius_core: Added new method io::walker::get_folder_name  
	* libmobius_core: Added new JSON decoder module (decoder::json)  
	* libmobius_core: Added new class decoder::json::tokenizer  
	* libmobius_core: Added new class decoder::json::parser  
	* libmobius_core: Added new method os::win::dpapi::blob(bytearray)  
	* libmobius_core: Added new method pod::data::to_list
	* libmobius_core: Added new method pod::data::to_map
	* libmobius_python: Added callback for "file_for_sampling" event

Mobius Forensic Toolkit 2.17
	* Added new C++ extension called "app-chromium"
	* app-chromium: Retrieve autofill_entry.date_created for versions < 55
	* app-chromium: Retrieve autofill_profiles as User Accounts
	* app-chromium: Retrieve Application Profiles
	* app-chromium: Retrieve Credit Cards
	* app-chromium: Retrieve Personal Direct Identifiers (PDI)
	* app-chromium: Retrieve Received Files
	* app-chromium: Retrieve Visited URLs
	* app-chromium: Added support for History schema version up to 69
	* app-chromium: Added support for Web Data schema version up to 135