@@ -11,7 +11,7 @@ Mobius Forensic Toolkit 2.18
 	* app-chromium: Added decoding for Login Data For Account files  
 	* app-chromium: Added decoding for Preferences files  
 	* app-chromium: Implemented new class post_processor_impl  
-	* app-chromium: Enhanced post_processor_impl to support decryption of both v10 and v20 Chromium encryption keys
+	* app-chromium: Enhanced post_processor_impl class to support decryption of both v10 and v20 Chromium encryption keys
 	* app-chromium: Enhanced profile class to fill metadata from Preferences' profile key
 	* ant.evidence: Added new module post.user_accounts_from_cookies  
 	* ant.evidence.vfs.accounts: Removed cookie retrieval feature
@@ -27,6 +27,7 @@ Mobius Forensic Toolkit 2.18
 	* libmobius_core: Added new method pod::data::to_list
 	* libmobius_core: Added new method pod::data::to_map
 	* libmobius_python: Added callback for "file_for_sampling" event
+	* libmobius_python: Added new method function::call
 
 Mobius Forensic Toolkit 2.17
 	* Added new C++ extension called "app-chromium"
